<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/formulario_de_producto"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_titulo2"
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tipo_de_envio"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_idproducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/identificador_de_producto"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_idproducto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_idproducto"
        app:layout_constraintTop_toBottomOf="@+id/edt_idproducto" />

    <EditText
        android:id="@+id/edt_telefono"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="textPersonName|phone"
        android:maxLength="50"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_direccion"
        app:layout_constraintStart_toStartOf="@+id/edt_direccion"
        app:layout_constraintTop_toBottomOf="@+id/edt_direccion" />

    <EditText
        android:id="@+id/edt_direccion"
        android:layout_width="381dp"
        android:layout_height="95dp"
        android:layout_marginTop="24dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textMultiLine|textPersonName"
        android:maxLength="100"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edt_nombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edt_nombre"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombre" />

    <RadioGroup
        android:id="@+id/rg_envio"
        android:layout_width="179dp"
        android:layout_height="143dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_telefono"
        app:layout_constraintVertical_bias="0.404">

        <RadioButton
            android:id="@+id/rb_enviourgente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="asignarEnvio"
            android:text="@string/envio_urgente_5" />

        <RadioButton
            android:id="@+id/rb_envionormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="asignarEnvio"
            android:checked="true"
            android:text="@string/envio_normal_4" />

        <RadioButton
            android:id="@+id/rb_enviolento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="asignarEnvio"
            android:minHeight="48dp"
            android:text="@string/envio_lento_3"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <Button
        android:id="@+id/bt_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="84dp"
        android:text="@string/siguiente"
        android:onClick="siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>